# ScreenRecorder

./: README.md  build.gradle  gradle.properties  settings.gradle  sr.jks
app/: CMakeLists.txt  app-release.apk  build.gradle  screenrecorder-1.0.0.apk  screenrecorder.apk
app/src/androidTest/java/com/pkhope/screenrecorder/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pkhope/screenrecorder/: SRApplication.java
app/src/main/java/com/pkhope/screenrecorder/Recorder/: GifRecorder.java  NativeGifEncorder.java  VideoRecorder.java
app/src/main/java/com/pkhope/screenrecorder/activity/: AboutActivity.java  BaseActivity.java  BrowserActivity.java  FeedBackActivity.java  HelpActivity.java  MainActivity.java  ProjectionActivity.java  SettingsActivity.java
app/src/main/java/com/pkhope/screenrecorder/adapter/: FileListAdapter.java
app/src/main/jni/: com_pkhope_screenrecorder_NativeGifEncorder.h  gif.h  gifencorder.cpp
app/src/main/res/drawable/: bg_rv_item.xml  btn_screenshot.xml  btn_screenshot_normal.xml  btn_screenshot_pressed.xml
app/src/main/res/layout/: activity_about.xml  activity_browser.xml  activity_feedback.xml  activity_help.xml  activity_main.xml  activity_setting.xml  layout_record.xml  list_item.xml  preference_item.xml  rv_item.xml
app/src/main/res/menu/: menu_feedback.xml  menu_main.xml  menu_popup.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: preference.xml
app/src/test/java/com/pkhope/screenrecorder/: ExampleUnitTest.java
(+6 files in other folders)
